Fixed incorrect z-index rendering

--- a/frontend/src/styles/CompactGroup.css
+++ b/frontend/src/styles/CompactGroup.css
@@ -2,7 +2,6 @@
   transition: transform ease-out 0.35s, box-shadow ease-in-out 0.2s;
   border-color: #c1c1c1;
   border-width: 5px;
-  z-index: 1;
 }
 .container:hover {
   transform: translateY(-0.8vh);
@@ -14,15 +13,4 @@
 .container > * {
   color: var(--col-secondary);
   font-weight: 300;
-}
-
-/* This was used to try adding sharp corners to some edges but I couldn't figure it out. In case we revisit it I left the css class. */
-.corner {
-  transition: box-shadow 0.2s;
-  position: absolute;
-  z-index: -2;
-  width: 50%;
-  height: 50%;
-  border-color: #c1c1c1;
-  border-width: 5px;
 }
